chore: add instructions to the README.md